<resources>
    <string name="app_name">CalculadoraIP</string>
    <string name="ms">MS</string>
    <string name="_0_255">0-255</string>
    <string name="punto">.</string>
    <string name="diagonal">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="c_all">C*</string>
    <string name="especificaciones">Especificaciones</string>
</resources>
