<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jaaz.calcip.MainActivity"
    android:background="@color/blanco">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_contenedor_1"
        android:paddingTop="10dp"
        android:background="@color/blanco"
        android:columnCount="9"
        android:rowCount="1">

        <EditText
            android:id="@+id/texto1"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/_0_255"
            android:editable="false"
            android:gravity="center"
            android:maxLength="3"
            android:textColor="@color/purpura"
            android:textColorHint="@color/orquidea"
            android:theme="@style/CampoTextoPurpura"
            android:layout_row="0"
            android:layout_column="0">
            <requestFocus/>
        </EditText>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/punto"
            android:gravity="center"
            android:textColor="@color/negro"
            android:layout_row="0"
            android:layout_column="1"/>

        <EditText
            android:id="@+id/texto2"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:hint="@string/_0_255"
            android:gravity="center"
            android:maxLength="3"
            android:textColor="@color/purpura"
            android:textColorHint="@color/orquidea"
            android:theme="@style/CampoTextoPurpura"
            android:layout_row="0"
            android:layout_column="2"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/punto"
            android:gravity="center"
            android:textColor="@color/negro"
            android:layout_row="0"
            android:layout_column="3"/>

        <EditText
            android:id="@+id/texto3"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:hint="@string/_0_255"
            android:gravity="center"
            android:maxLength="3"
            android:textColor="@color/purpura"
            android:textColorHint="@color/orquidea"
            android:theme="@style/CampoTextoPurpura"
            android:layout_row="0"
            android:layout_column="4"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/punto"
            android:gravity="center"
            android:textColor="@color/negro"
            android:layout_row="0"
            android:layout_column="5"/>

        <EditText
            android:id="@+id/texto4"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:hint="@string/_0_255"
            android:gravity="center"
            android:maxLength="3"
            android:textColor="@color/purpura"
            android:textColorHint="@color/orquidea"
            android:theme="@style/CampoTextoPurpura"
            android:layout_row="0"
            android:layout_column="6"/>

        <TextView
            android:id="@+id/textView4"
            android:text="@string/diagonal"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/negro"
            android:layout_row="0"
            android:layout_column="7"/>

        <EditText
            android:id="@+id/texto_ms"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:hint="@string/ms"
            android:gravity="center"
            android:maxLength="2"
            android:textColor="@color/purpura"
            android:textColorHint="@color/orquidea"
            android:theme="@style/CampoTextoPurpura"
            android:layout_row="0"
            android:layout_column="8"/>

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="5"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_contenedor_1"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/n_9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_9"
            android:textColor="@color/blanco"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/n_8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_8"
            android:textColor="@color/blanco"
            android:layout_row="0"
            android:layout_column="1"/>

        <Button
            android:id="@+id/n_7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_7"
            android:textColor="@color/blanco"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/n_6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_6"
            android:textColor="@color/blanco"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/n_5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_5"
            android:textColor="@color/blanco"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/n_4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_4"
            android:textColor="@color/blanco"
            android:layout_row="1"
            android:layout_column="2"/>

        <Button
            android:id="@+id/n_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_3"
            android:textColor="@color/blanco"

            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:id="@+id/n_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_2"
            android:textColor="@color/blanco"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:id="@+id/n_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_1"
            android:textColor="@color/blanco"
            android:layout_row="2"
            android:layout_column="2"/>

        <Button
            android:id="@+id/n_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/_0"
            android:textColor="@color/blanco"

            android:layout_row="3"
            android:layout_column="0"/>

        <Button
            android:id="@+id/button_c"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/c"
            android:textColor="@color/blanco"
            android:layout_row="3"
            android:layout_column="1"/>

        <Button
            android:id="@+id/button_call"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_circle"
            android:text="@string/c_all"
            android:textColor="@color/blanco"
            android:layout_row="3"
            android:layout_column="2"/>

        <!--<ImageButton
            android:id="@+id/button_erase"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:src="@drawable/eraser"
            android:scaleType="centerCrop"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/punto"
            android:background="@drawable/btn_circle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp" /> -->

        <ImageButton
            android:id="@+id/button_help"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/btn_circle"
            android:contentDescription="@string/punto"
            android:scaleType="centerCrop"
            android:src="@drawable/help"
            android:layout_row="4"
            android:layout_column="0"/>

        <ImageButton
            android:id="@+id/button_equal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/btn_circle_blanco"
            android:contentDescription="@string/punto"
            android:scaleType="centerCrop"
            android:src="@drawable/igual"
            android:layout_row="4"
            android:layout_column="2"/>

    </GridLayout>

</RelativeLayout>